fix todo whitespace

--- a/cell03/ex04/ex03bis/todo.css
+++ b/cell03/ex04/ex03bis/todo.css
@@ -32,6 +32,7 @@ a{
     justify-content: center;
     height: 50px;
     align-items: center;
+    white-space: pre;
 }
 
 .new-btn{
